WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308281
[GStreamer][MediaStream] Fix setSinkId
https://bugs.webkit.org/show_bug.cgi?id=308281
Summary
[GStreamer][MediaStream] Fix setSinkId
Xabier Rodríguez Calvar
Reported
2026-02-20 02:22:28 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2026-02-20 02:36:11 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59073
EWS
Comment 2
2026-02-20 04:23:52 PST
Committed
307904@main
(b9e7b6ae18d9): <
https://commits.webkit.org/307904@main
> Reviewed commits have been landed. Closing PR #59073 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-20 04:24:13 PST
<
rdar://problem/170796306
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug