[GStreamer][MediaStream] Fix setSinkId https://bugs.webkit.org/show_bug.cgi?id=308281

Reviewed by Philippe Normand.

We needed to enable per element speaker selection and pipe the proper sink when the player is created.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::createAudioSink):

Canonical link: https://commits.webkit.org/307904@main