Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp
@@ -1563,8 +1563,38 @@ GstElement* MediaPlayerPrivateGStreamer::createAudioSink()
 
     // For platform specific audio sinks, they need to be properly upranked so that they get properly autoplugged.
 
-    auto role = player->isVideoPlayer() ? "video"_s : "music"_s;
-    GstElement* audioSink = createPlatformAudioSink(role);
+    GstElement* audioSink = nullptr;
+
+#if ENABLE(MEDIA_STREAM)
+    auto deviceId = player->audioOutputDeviceId();
+    if (!deviceId.isEmpty()) {
+        GST_DEBUG("createAudioSink: audioOutputDeviceId='%s', attempting device-specific sink", deviceId.utf8().data());
+        if (deviceId == "default"_s) {
+            const auto& devices = GStreamerAudioCaptureDeviceManager::singleton().speakerDevices();
+            if (!devices.isEmpty()) [[likely]] {
+                const auto defaultDeviceIndex = devices.findIf([](const CaptureDevice& device) {
+                    return device.isDefault();
+                });
+                deviceId = defaultDeviceIndex == notFound ? devices.first().persistentId() : devices[defaultDeviceIndex].persistentId();
+                GST_DEBUG("createAudioSink: default device is '%s'", deviceId.utf8().data());
+            }
+        }
+        if (auto captureDevice = GStreamerAudioCaptureDeviceManager::singleton().gstreamerDeviceWithUID(deviceId)) {
+            auto* device = captureDevice->device();
+            audioSink = gst_device_create_element(device, "audio-output-sink");
+            if (audioSink)
+                GST_DEBUG("createAudioSink: created '%s' (type=%s)", GST_ELEMENT_NAME(audioSink), G_OBJECT_TYPE_NAME(audioSink));
+            else
+                GST_WARNING("createAudioSink: gst_device_create_element failed, falling back to platform sink");
+        } else
+            GST_WARNING("createAudioSink: could not find GstDevice for '%s', falling back to platform sink", deviceId.utf8().data());
+    }
+#endif
+
+    if (!audioSink) {
+        auto role = player->isVideoPlayer() ? "video"_s : "music"_s;
+        audioSink = createPlatformAudioSink(role);
+    }
     RELEASE_ASSERT(audioSink);
     if (!audioSink)
         return nullptr;
